Assignment5/src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_DEFINE
    KEYWORD_PACKAGE
    COMMENT
    KEYWORD_BREAK
    KEYWORD_YIELD
    KEYWORD_PRIVATE
    KEYWORD_IMPORT
    KEYWORD_OFDIM
    KEYWORD_EXTENDS
    COMMENT_END
    CHAR
    KEYWORD_NULL
    COMMENT_BEGIN
    KEYWORD_THIS
    DOUBLE_NUMBER
    KEYWORD_WITH
    STRING
    KEYWORD_TYPE
    KEYWORD_PROTECTED
    KEYWORD_OVERRIDE

Grammar

Rule 0     S' -> ProgramStructure
Rule 1     ProgramStructure -> ProgramStructure class_and_objects
Rule 2     ProgramStructure -> class_and_objects
Rule 3     class_and_objects -> SingletonObject
Rule 4     class_and_objects -> class_declaration
Rule 5     SingletonObject -> ObjectDeclare block
Rule 6     ObjectDeclare -> KEYWORD_OBJECT IDENTIFIER
Rule 7     block -> start_scope block_statements_opt end_scope
Rule 8     start_scope -> BLOCKBEGIN
Rule 9     end_scope -> BLOCKEND
Rule 10    block_statements_opt -> block_statements
Rule 11    block_statements_opt -> empty
Rule 12    block_statements -> block_statement
Rule 13    block_statements -> block_statements marker block_statement
Rule 14    block_statement -> local_variable_declaration_statement
Rule 15    block_statement -> statement
Rule 16    block_statement -> class_declaration
Rule 17    block_statement -> SingletonObject
Rule 18    block_statement -> method_declaration
Rule 19    expression -> assignment_expression
Rule 20    expression_optional -> expression
Rule 21    expression_optional -> empty
Rule 22    assignment_expression -> assignment
Rule 23    assignment_expression -> conditional_or_expression
Rule 24    assignment_expression -> method_invocation
Rule 25    assignment -> valid_variable assignment_operator assignment_expression
Rule 26    valid_variable -> name
Rule 27    valid_variable -> array_access
Rule 28    array_access -> name dimension
Rule 29    dimension -> LBRAC expression RBRAC
Rule 30    assignment_operator -> ASOP
Rule 31    assignment_operator -> TIMES_ASSIGN
Rule 32    assignment_operator -> DIVIDE_ASSIGN
Rule 33    assignment_operator -> REMAINDER_ASSIGN
Rule 34    assignment_operator -> PLUS_ASSIGN
Rule 35    assignment_operator -> MINUS_ASSIGN
Rule 36    assignment_operator -> LSHIFT_ASSIGN
Rule 37    assignment_operator -> RSHIFT_ASSIGN
Rule 38    assignment_operator -> AND_ASSIGN
Rule 39    assignment_operator -> OR_ASSIGN
Rule 40    assignment_operator -> XOR_ASSIGN
Rule 41    marker -> empty
Rule 42    narker -> empty
Rule 43    conditional_or_expression -> conditional_and_expression
Rule 44    conditional_or_expression -> conditional_or_expression OR marker conditional_and_expression
Rule 45    conditional_and_expression -> inclusive_or_expression
Rule 46    conditional_and_expression -> conditional_and_expression AND marker inclusive_or_expression
Rule 47    inclusive_or_expression -> exclusive_or_expression
Rule 48    inclusive_or_expression -> inclusive_or_expression OR_BITWISE exclusive_or_expression
Rule 49    exclusive_or_expression -> and_expression
Rule 50    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 51    and_expression -> equality_expression
Rule 52    and_expression -> and_expression AND_BITWISE equality_expression
Rule 53    equality_expression -> relational_expression
Rule 54    equality_expression -> equality_expression EQUAL relational_expression
Rule 55    equality_expression -> equality_expression NEQUAL relational_expression
Rule 56    relational_expression -> shift_expression
Rule 57    relational_expression -> relational_expression GREATER shift_expression
Rule 58    relational_expression -> relational_expression LESS shift_expression
Rule 59    relational_expression -> relational_expression GEQ shift_expression
Rule 60    relational_expression -> relational_expression LEQ shift_expression
Rule 61    shift_expression -> additive_expression
Rule 62    shift_expression -> shift_expression LSHIFT additive_expression
Rule 63    shift_expression -> shift_expression RSHIFT additive_expression
Rule 64    additive_expression -> multiplicative_expression
Rule 65    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 66    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 67    multiplicative_expression -> unary_expression
Rule 68    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 69    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 70    multiplicative_expression -> multiplicative_expression REMAINDER unary_expression
Rule 71    unary_expression -> PLUS unary_expression
Rule 72    unary_expression -> MINUS unary_expression
Rule 73    unary_expression -> unary_expression_not_plus_minus
Rule 74    unary_expression_not_plus_minus -> base_variable_set
Rule 75    unary_expression_not_plus_minus -> TILDA unary_expression
Rule 76    unary_expression_not_plus_minus -> NOT unary_expression
Rule 77    base_variable_set -> variable_literal
Rule 78    base_variable_set -> LPAREN expression RPAREN
Rule 79    variable_literal -> valid_variable
Rule 80    variable_literal -> primary
Rule 81    primary -> literal
Rule 82    primary -> method_invocation
Rule 83    literal -> int_float
Rule 84    literal -> c_literal
Rule 85    c_literal -> BOOL_CONSTT
Rule 86    c_literal -> BOOL_CONSTF
Rule 87    int_float -> INT_NUMBER
Rule 88    method_invocation -> name LPAREN argument_list_opt RPAREN
Rule 89    argument_list_opt -> argument_list
Rule 90    argument_list_opt -> empty
Rule 91    argument_list -> expression
Rule 92    argument_list -> argument_list COMMA expression
Rule 93    declaration_keyword -> KEYWORD_VAR
Rule 94    declaration_keyword -> KEYWORD_VAL
Rule 95    local_variable_declaration_statement -> local_variable_declaration TERMINATOR
Rule 96    local_variable_declaration -> declaration_keyword variable_declaration_body
Rule 97    variable_declaration_initializer -> expression
Rule 98    variable_declaration_initializer -> array_initializer
Rule 99    variable_declaration_initializer -> class_initializer
Rule 100   variable_argument_list -> variable_declaration_initializer
Rule 101   variable_argument_list -> variable_argument_list COMMA variable_declaration_initializer
Rule 102   variable_declaration_body -> identifiers COLON type ASOP variable_declaration_initializer
Rule 103   identifiers -> identifiers COMMA IDENTIFIER
Rule 104   identifiers -> IDENTIFIER
Rule 105   variable_list -> variable_declarator_id
Rule 106   variable_list -> variable_list COMMA variable_declarator_id
Rule 107   variable_declarator_id -> IDENTIFIER COLON type
Rule 108   fun_variable_declarator_id -> IDENTIFIER COLON type
Rule 109   type -> primitive_type
Rule 110   type -> reference_type
Rule 111   primitive_type -> TYPE_INT
Rule 112   primitive_type -> TYPE_DOUBLE
Rule 113   primitive_type -> TYPE_CHAR
Rule 114   primitive_type -> TYPE_STRING
Rule 115   primitive_type -> TYPE_BOOLEAN
Rule 116   primitive_type -> TYPE_VOID
Rule 117   reference_type -> class_data_type
Rule 118   reference_type -> array_data_type
Rule 119   class_data_type -> name
Rule 120   array_data_type -> KEYWORD_ARRAY LBRAC TYPE_INT RBRAC
Rule 121   name -> simple_name
Rule 122   name -> qualified_name
Rule 123   simple_name -> IDENTIFIER
Rule 124   qualified_name -> name INST simple_name
Rule 125   array_initializer -> KEYWORD_NEW KEYWORD_ARRAY LBRAC type RBRAC LPAREN conditional_or_expression RPAREN
Rule 126   array_initializer -> KEYWORD_ARRAY LBRAC type RBRAC LPAREN argument_list RPAREN
Rule 127   class_initializer -> KEYWORD_NEW name LPAREN argument_list_opt RPAREN
Rule 128   statement -> normal_statement marker
Rule 129   statement -> if_then_statement marker
Rule 130   statement -> if_then_else_statement marker
Rule 131   statement -> while_statement marker
Rule 132   statement -> do_while_statement marker
Rule 133   statement -> for_statement marker
Rule 134   normal_statement -> block marker
Rule 135   normal_statement -> expression_statement marker
Rule 136   normal_statement -> empty_statement marker
Rule 137   normal_statement -> return_statement marker
Rule 138   normal_statement -> switch_statement marker
Rule 139   expression_statement -> statement_expression TERMINATOR
Rule 140   statement_expression -> assignment
Rule 141   statement_expression -> method_invocation
Rule 142   if_then_statement -> KEYWORD_IF LPAREN expression RPAREN marker block
Rule 143   if_then_else_statement -> KEYWORD_IF LPAREN expression RPAREN marker if_then_else_intermediate narker KEYWORD_ELSE marker block
Rule 144   if_then_else_statement_precedence -> KEYWORD_IF LPAREN expression RPAREN marker if_then_else_intermediate narker KEYWORD_ELSE marker if_then_else_intermediate
Rule 145   if_then_else_intermediate -> normal_statement
Rule 146   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 147   while_statement -> KEYWORD_WHILE LPAREN marker expression RPAREN marker block
Rule 148   do_while_statement -> KEYWORD_DO marker block KEYWORD_WHILE LPAREN marker expression RPAREN TERMINATOR
Rule 149   for_statement -> KEYWORD_FOR LPAREN for_update RPAREN marker block
Rule 150   for_update -> for_loop marker for_step_opts
Rule 151   for_loop -> IDENTIFIER CHOOSE expression for_untilTo marker expression
Rule 152   for_untilTo -> KEYWORD_UNTIL
Rule 153   for_untilTo -> KEYWORD_TO
Rule 154   for_step_opts -> KEYWORD_BY expression
Rule 155   for_step_opts -> empty
Rule 156   switch_statement -> expression KEYWORD_MATCH switch_block marker
Rule 157   switch_block -> BLOCKBEGIN BLOCKEND
Rule 158   switch_block -> BLOCKBEGIN switch_block_statements BLOCKEND
Rule 159   switch_block_statements -> switch_block_statement marker
Rule 160   switch_block_statements -> switch_block_statements switch_block_statement marker
Rule 161   switch_block_statement -> switch_label narker marker block narker
Rule 162   switch_label -> KEYWORD_CASE expression FUNTYPE
Rule 163   empty_statement -> TERMINATOR
Rule 164   return_statement -> KEYWORD_RETURN expression_optional TERMINATOR
Rule 165   method_declaration -> method_header method_body
Rule 166   method_header -> method_header_name func_arg_start fun_params_opt RPAREN COLON method_return_type ASOP
Rule 167   func_arg_start -> LPAREN
Rule 168   fun_params_opt -> fun_params
Rule 169   fun_params_opt -> empty
Rule 170   fun_params -> fun_variable_declarator_id
Rule 171   fun_params -> fun_params COMMA fun_variable_declarator_id
Rule 172   method_return_type -> type
Rule 173   method_return_type -> TYPE_VOID
Rule 174   method_header_name -> KEYWORD_DEF IDENTIFIER
Rule 175   method_body -> method_start_scope block_statements_opt end_scope
Rule 176   method_start_scope -> BLOCKBEGIN
Rule 177   class_declaration -> class_header class_body
Rule 178   class_header -> KEYWORD_CLASS simple_name class_param_clause
Rule 179   class_param_clause -> func_arg_start class_params_opt RPAREN
Rule 180   class_params_opt -> class_params
Rule 181   class_params_opt -> empty
Rule 182   class_params -> class_param
Rule 183   class_params -> class_params COMMA class_param
Rule 184   class_param -> class_declaration_keyword_opt variable_declarator_id
Rule 185   class_declaration_keyword_opt -> declaration_keyword
Rule 186   class_declaration_keyword_opt -> empty
Rule 187   type_opt -> COLON type
Rule 188   type_opt -> empty
Rule 189   class_body -> class_body_start block_statements_opt end_scope
Rule 190   class_body_start -> BLOCKBEGIN
Rule 191   empty -> <empty>

Terminals, with rules where they appear

AND                  : 46
AND_ASSIGN           : 38
AND_BITWISE          : 52
ASOP                 : 30 102 166
BLOCKBEGIN           : 8 157 158 176 190
BLOCKEND             : 9 157 158
BOOL_CONSTF          : 86
BOOL_CONSTT          : 85
CHAR                 : 
CHOOSE               : 151
COLON                : 102 107 108 166 187
COMMA                : 92 101 103 106 171 183
COMMENT              : 
COMMENT_BEGIN        : 
COMMENT_END          : 
DIVIDE               : 69
DIVIDE_ASSIGN        : 32
DOUBLE_NUMBER        : 
EQUAL                : 54
FUNTYPE              : 162
GEQ                  : 59
GREATER              : 57
IDENTIFIER           : 6 103 104 107 108 123 151 174
INST                 : 124
INT_NUMBER           : 87
KEYWORD_ARRAY        : 120 125 126
KEYWORD_BREAK        : 
KEYWORD_BY           : 154
KEYWORD_CASE         : 162
KEYWORD_CLASS        : 178
KEYWORD_DEF          : 174
KEYWORD_DEFINE       : 
KEYWORD_DO           : 148
KEYWORD_ELSE         : 143 144
KEYWORD_EXTENDS      : 
KEYWORD_FOR          : 149
KEYWORD_IF           : 142 143 144
KEYWORD_IMPORT       : 
KEYWORD_MATCH        : 156
KEYWORD_NEW          : 125 127
KEYWORD_NULL         : 
KEYWORD_OBJECT       : 6
KEYWORD_OFDIM        : 
KEYWORD_OVERRIDE     : 
KEYWORD_PACKAGE      : 
KEYWORD_PRIVATE      : 
KEYWORD_PROTECTED    : 
KEYWORD_RETURN       : 164
KEYWORD_THIS         : 
KEYWORD_TO           : 153
KEYWORD_TYPE         : 
KEYWORD_UNTIL        : 152
KEYWORD_VAL          : 94
KEYWORD_VAR          : 93
KEYWORD_WHILE        : 147 148
KEYWORD_WITH         : 
KEYWORD_YIELD        : 
LBRAC                : 29 120 125 126
LEQ                  : 60
LESS                 : 58
LPAREN               : 78 88 125 126 127 142 143 144 147 148 149 167
LSHIFT               : 62
LSHIFT_ASSIGN        : 36
MINUS                : 66 72
MINUS_ASSIGN         : 35
NEQUAL               : 55
NOT                  : 76
OR                   : 44
OR_ASSIGN            : 39
OR_BITWISE           : 48
PLUS                 : 65 71
PLUS_ASSIGN          : 34
RBRAC                : 29 120 125 126
REMAINDER            : 70
REMAINDER_ASSIGN     : 33
RPAREN               : 78 88 125 126 127 142 143 144 147 148 149 166 179
RSHIFT               : 63
RSHIFT_ASSIGN        : 37
STRING               : 
TERMINATOR           : 95 139 148 163 164
TILDA                : 75
TIMES                : 68
TIMES_ASSIGN         : 31
TYPE_BOOLEAN         : 115
TYPE_CHAR            : 113
TYPE_DOUBLE          : 112
TYPE_INT             : 111 120
TYPE_STRING          : 114
TYPE_VOID            : 116 173
XOR                  : 50
XOR_ASSIGN           : 40
error                : 

Nonterminals, with rules where they appear

ObjectDeclare        : 5
ProgramStructure     : 1 0
SingletonObject      : 3 17
additive_expression  : 61 62 63 65 66
and_expression       : 49 50 52
argument_list        : 89 92 126
argument_list_opt    : 88 127
array_access         : 27
array_data_type      : 118
array_initializer    : 98
assignment           : 22 140
assignment_expression : 19 25
assignment_operator  : 25
base_variable_set    : 74
block                : 5 134 142 143 147 148 149 161
block_statement      : 12 13
block_statements     : 10 13
block_statements_opt : 7 175 189
c_literal            : 84
class_and_objects    : 1 2
class_body           : 177
class_body_start     : 189
class_data_type      : 117
class_declaration    : 4 16
class_declaration_keyword_opt : 184
class_header         : 177
class_initializer    : 99
class_param          : 182 183
class_param_clause   : 178
class_params         : 180 183
class_params_opt     : 179
conditional_and_expression : 43 44 46
conditional_or_expression : 23 44 125
declaration_keyword  : 96 185
dimension            : 28
do_while_statement   : 132
empty                : 11 21 41 42 90 155 169 181 186 188
empty_statement      : 136
end_scope            : 7 175 189
equality_expression  : 51 52 54 55
exclusive_or_expression : 47 48 50
expression           : 20 29 78 91 92 97 142 143 144 147 148 151 151 154 156 162
expression_optional  : 164
expression_statement : 135
for_loop             : 150
for_statement        : 133
for_step_opts        : 150
for_untilTo          : 151
for_update           : 149
fun_params           : 168 171
fun_params_opt       : 166
fun_variable_declarator_id : 170 171
func_arg_start       : 166 179
identifiers          : 102 103
if_then_else_intermediate : 143 144 144
if_then_else_statement : 130
if_then_else_statement_precedence : 146
if_then_statement    : 129
inclusive_or_expression : 45 46 48
int_float            : 83
literal              : 81
local_variable_declaration : 95
local_variable_declaration_statement : 14
marker               : 13 44 46 128 129 130 131 132 133 134 135 136 137 138 142 143 143 144 144 147 147 148 148 149 150 151 156 159 160 161
method_body          : 165
method_declaration   : 18
method_header        : 165
method_header_name   : 166
method_invocation    : 24 82 141
method_return_type   : 166
method_start_scope   : 175
multiplicative_expression : 64 65 66 68 69 70
name                 : 26 28 88 119 124 127
narker               : 143 144 161 161
normal_statement     : 128 145
primary              : 80
primitive_type       : 109
qualified_name       : 122
reference_type       : 110
relational_expression : 53 54 55 57 58 59 60
return_statement     : 137
shift_expression     : 56 57 58 59 60 62 63
simple_name          : 121 124 178
start_scope          : 7
statement            : 15
statement_expression : 139
switch_block         : 156
switch_block_statement : 159 160
switch_block_statements : 158 160
switch_label         : 161
switch_statement     : 138
type                 : 102 107 108 125 126 172 187
type_opt             : 
unary_expression     : 67 68 69 70 71 72 75 76
unary_expression_not_plus_minus : 73
valid_variable       : 25 79
variable_argument_list : 101
variable_declaration_body : 96
variable_declaration_initializer : 100 101 102
variable_declarator_id : 105 106 184
variable_list        : 106
variable_literal     : 77
while_statement      : 131

Parsing method: LALR

state 0

    (0) S' -> . ProgramStructure
    (1) ProgramStructure -> . ProgramStructure class_and_objects
    (2) ProgramStructure -> . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (177) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (178) class_header -> . KEYWORD_CLASS simple_name class_param_clause

    KEYWORD_OBJECT  shift and go to state 8
    KEYWORD_CLASS   shift and go to state 1

    ProgramStructure               shift and go to state 2
    ObjectDeclare                  shift and go to state 3
    class_declaration              shift and go to state 4
    class_and_objects              shift and go to state 5
    SingletonObject                shift and go to state 6
    class_header                   shift and go to state 7

state 1

    (178) class_header -> KEYWORD_CLASS . simple_name class_param_clause
    (123) simple_name -> . IDENTIFIER

    IDENTIFIER      shift and go to state 9

    simple_name                    shift and go to state 10

state 2

    (0) S' -> ProgramStructure .
    (1) ProgramStructure -> ProgramStructure . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (177) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (178) class_header -> . KEYWORD_CLASS simple_name class_param_clause

    KEYWORD_OBJECT  shift and go to state 8
    KEYWORD_CLASS   shift and go to state 1

    ObjectDeclare                  shift and go to state 3
    class_declaration              shift and go to state 4
    class_and_objects              shift and go to state 11
    SingletonObject                shift and go to state 6
    class_header                   shift and go to state 7

state 3

    (5) SingletonObject -> ObjectDeclare . block
    (7) block -> . start_scope block_statements_opt end_scope
    (8) start_scope -> . BLOCKBEGIN

    BLOCKBEGIN      shift and go to state 12

    start_scope                    shift and go to state 13
    block                          shift and go to state 14

state 4

    (4) class_and_objects -> class_declaration .

    KEYWORD_OBJECT  reduce using rule 4 (class_and_objects -> class_declaration .)
    KEYWORD_CLASS   reduce using rule 4 (class_and_objects -> class_declaration .)
    $end            reduce using rule 4 (class_and_objects -> class_declaration .)


state 5

    (2) ProgramStructure -> class_and_objects .

    KEYWORD_OBJECT  reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KEYWORD_CLASS   reduce using rule 2 (ProgramStructure -> class_and_objects .)
    $end            reduce using rule 2 (ProgramStructure -> class_and_objects .)


state 6

    (3) class_and_objects -> SingletonObject .

    KEYWORD_OBJECT  reduce using rule 3 (class_and_objects -> SingletonObject .)
    KEYWORD_CLASS   reduce using rule 3 (class_and_objects -> SingletonObject .)
    $end            reduce using rule 3 (class_and_objects -> SingletonObject .)


state 7

    (177) class_declaration -> class_header . class_body
    (189) class_body -> . class_body_start block_statements_opt end_scope
    (190) class_body_start -> . BLOCKBEGIN

    BLOCKBEGIN      shift and go to state 17

    class_body_start               shift and go to state 15
    class_body                     shift and go to state 16

state 8

    (6) ObjectDeclare -> KEYWORD_OBJECT . IDENTIFIER

    IDENTIFIER      shift and go to state 18


state 9

    (123) simple_name -> IDENTIFIER .

    LPAREN          reduce using rule 123 (simple_name -> IDENTIFIER .)
    INST            reduce using rule 123 (simple_name -> IDENTIFIER .)
    LBRAC           reduce using rule 123 (simple_name -> IDENTIFIER .)
    TIMES           reduce using rule 123 (simple_name -> IDENTIFIER .)
    DIVIDE          reduce using rule 123 (simple_name -> IDENTIFIER .)
    REMAINDER       reduce using rule 123 (simple_name -> IDENTIFIER .)
    PLUS            reduce using rule 123 (simple_name -> IDENTIFIER .)
    MINUS           reduce using rule 123 (simple_name -> IDENTIFIER .)
    LSHIFT          reduce using rule 123 (simple_name -> IDENTIFIER .)
    RSHIFT          reduce using rule 123 (simple_name -> IDENTIFIER .)
    GREATER         reduce using rule 123 (simple_name -> IDENTIFIER .)
    LESS            reduce using rule 123 (simple_name -> IDENTIFIER .)
    GEQ             reduce using rule 123 (simple_name -> IDENTIFIER .)
    LEQ             reduce using rule 123 (simple_name -> IDENTIFIER .)
    EQUAL           reduce using rule 123 (simple_name -> IDENTIFIER .)
    NEQUAL          reduce using rule 123 (simple_name -> IDENTIFIER .)
    AND_BITWISE     reduce using rule 123 (simple_name -> IDENTIFIER .)
    XOR             reduce using rule 123 (simple_name -> IDENTIFIER .)
    OR_BITWISE      reduce using rule 123 (simple_name -> IDENTIFIER .)
    AND             reduce using rule 123 (simple_name -> IDENTIFIER .)
    OR              reduce using rule 123 (simple_name -> IDENTIFIER .)
    KEYWORD_MATCH   reduce using rule 123 (simple_name -> IDENTIFIER .)
    TERMINATOR      reduce using rule 123 (simple_name -> IDENTIFIER .)
    RPAREN          reduce using rule 123 (simple_name -> IDENTIFIER .)
    RBRAC           reduce using rule 123 (simple_name -> IDENTIFIER .)
    COMMA           reduce using rule 123 (simple_name -> IDENTIFIER .)
    FUNTYPE         reduce using rule 123 (simple_name -> IDENTIFIER .)
    KEYWORD_UNTIL   reduce using rule 123 (simple_name -> IDENTIFIER .)
    KEYWORD_TO      reduce using rule 123 (simple_name -> IDENTIFIER .)
    KEYWORD_BY      reduce using rule 123 (simple_name -> IDENTIFIER .)
    ASOP            reduce using rule 123 (simple_name -> IDENTIFIER .)
    TIMES_ASSIGN    reduce using rule 123 (simple_name -> IDENTIFIER .)
    DIVIDE_ASSIGN   reduce using rule 123 (simple_name -> IDENTIFIER .)
    REMAINDER_ASSIGN reduce using rule 123 (simple_name -> IDENTIFIER .)
    PLUS_ASSIGN     reduce using rule 123 (simple_name -> IDENTIFIER .)
    MINUS_ASSIGN    reduce using rule 123 (simple_name -> IDENTIFIER .)
    LSHIFT_ASSIGN   reduce using rule 123 (simple_name -> IDENTIFIER .)
    RSHIFT_ASSIGN   reduce using rule 123 (simple_name -> IDENTIFIER .)
    AND_ASSIGN      reduce using rule 123 (simple_name -> IDENTIFIER .)
    OR_ASSIGN       reduce using rule 123 (simple_name -> IDENTIFIER .)
    XOR_ASSIGN      reduce using rule 123 (simple_name -> IDENTIFIER .)


state 10

    (178) class_header -> KEYWORD_CLASS simple_name . class_param_clause
    (179) class_param_clause -> . func_arg_start class_params_opt RPAREN
    (167) func_arg_start -> . LPAREN

    LPAREN          shift and go to state 21

    func_arg_start                 shift and go to state 19
    class_param_clause             shift and go to state 20

state 11

    (1) ProgramStructure -> ProgramStructure class_and_objects .

    KEYWORD_OBJECT  reduce using rule 1 (ProgramStructure -> ProgramStructure class_and_objects .)
    KEYWORD_CLASS   reduce using rule 1 (ProgramStructure -> ProgramStructure class_and_objects .)
    $end            reduce using rule 1 (ProgramStructure -> ProgramStructure class_and_objects .)


state 12

    (8) start_scope -> BLOCKBEGIN .

    KEYWORD_IF      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_WHILE   reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_DO      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_FOR     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_CLASS   reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_OBJECT  reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_VAR     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_VAL     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    TERMINATOR      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_RETURN  reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    KEYWORD_DEF     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    BLOCKBEGIN      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    IDENTIFIER      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    PLUS            reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    MINUS           reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    TILDA           reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    NOT             reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    LPAREN          reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    INT_NUMBER      reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    BOOL_CONSTT     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    BOOL_CONSTF     reduce using rule 8 (start_scope -> BLOCKBEGIN .)
    BLOCKEND        reduce using rule 8 (start_scope -> BLOCKBEGIN .)


state 13

    (7) block -> start_scope . block_statements_opt end_scope
    (10) block_statements_opt -> . block_statements
    (11) block_statements_opt -> . empty
    (12) block_statements -> . block_statement
    (13) block_statements -> . block_statements marker block_statement
    (191) empty -> .
    (14) block_statement -> . local_variable_declaration_statement
    (15) block_statement -> . statement
    (16) block_statement -> . class_declaration
    (17) block_statement -> . SingletonObject
    (18) block_statement -> . method_declaration
    (95) local_variable_declaration_statement -> . local_variable_declaration TERMINATOR
    (128) statement -> . normal_statement marker
    (129) statement -> . if_then_statement marker
    (130) statement -> . if_then_else_statement marker
    (131) statement -> . while_statement marker
    (132) statement -> . do_while_statement marker
    (133) statement -> . for_statement marker
    (177) class_declaration -> . class_header class_body
    (5) SingletonObject -> . ObjectDeclare block
    (165) method_declaration -> . method_header method_body
    (96) local_variable_declaration -> . declaration_keyword variable_declaration_body
    (134) normal_statement -> . block marker
    (135) normal_statement -> . expression_statement marker
    (136) normal_statement -> . empty_statement marker
    (137) normal_statement -> . return_statement marker
    (138) normal_statement -> . switch_statement marker
    (142) if_then_statement -> . KEYWORD_IF LPAREN expression RPAREN marker block
    (143) if_then_else_statement -> . KEYWORD_IF LPAREN expression RPAREN marker if_then_else_intermediate narker KEYWORD_ELSE marker block
    (147) while_statement -> . KEYWORD_WHILE LPAREN marker expression RPAREN marker block
    (148) do_while_statement -> . KEYWORD_DO marker block KEYWORD_WHILE LPAREN marker expression RPAREN TERMINATOR
    (149) for_statement -> . KEYWORD_FOR LPAREN for_update RPAREN marker block
    (178) class_header -> . KEYWORD_CLASS simple_name class_param_clause
    (6) ObjectDeclare -> . KEYWORD_OBJECT IDENTIFIER
    (166) method_header -> . method_header_name func_arg_start fun_params_opt RPAREN COLON method_return_type ASOP
    (93) declaration_keyword -> . KEYWORD_VAR
    (94) declaration_keyword -> . KEYWORD_VAL
    (7) block -> . start_scope block_statements_opt end_scope
    (139) expression_statement -> . statement_expression TERMINATOR
    (163) empty_statement -> . TERMINATOR
    (164) return_statement -> . KEYWORD_RETURN expression_optional TERMINATOR
    (156) switch_statement -> . expression KEYWORD_MATCH switch_block marker
    (174) method_header_name -> . KEYWORD_DEF IDENTIFIER
    (8) start_scope -> . BLOCKBEGIN
    (140) statement_expression -> . assignment
    (141) statement_expression -> . method_invocation
    (19) expression -> . assignment_expression
    (25) assignment -> . valid_variable assignment_operator assignment_expression
    (88) method_invocation -> . name LPAREN argument_list_opt RPAREN
    (22) assignment_expression -> . assignment
    (23) assignment_expression -> . conditional_or_expression
    (24) assignment_expression -> . method_invocation
    (26) valid_variable -> . name
    (27) valid_variable -> . array_access
    (121) name -> . simple_name
    (122) name -> . qualified_name
    (43) conditional_or_expression -> . conditional_and_expression
    (44) conditional_or_expression -> . conditional_or_expression OR marker conditional_and_expression
    (28) array_access -> . name dimension
    (123) simple_name -> . IDENTIFIER
    (124) qualified_name -> . name INST simple_name
    (45) conditional_and_expression -> . inclusive_or_expression
    (46) conditional_and_expression -> . conditional_and_expression AND marker inclusive_or_expression
    (47) inclusive_or_expression -> . exclusive_or_expression
    (48) inclusive_or_expression -> . inclusive_or_expression OR_BITWISE exclusive_or_expression
    (49) exclusive_or_expression -> . and_expression
    (50) exclusive_or_expression -> . exclusive_or_expression XOR and_expression
    (51) and_expression -> . equality_expression
    (52) and_expression -> . and_expression AND_BITWISE equality_expression
    (53) equality_expression -> . relational_expression
    (54) equality_expression -> . equality_expression EQUAL relational_expression
    (55) equality_expression -> . equality_expression NEQUAL relational_expression
    (56) relational_expression -> . shift_expression
    (57) relational_expression -> . relational_expression GREATER shift_expression
    (58) relational_expression -> . relational_expression LESS shift_expression
    (59) relational_expression -> . relational_expression GEQ shift_expression
    (60) relational_expression -> . relational_expression LEQ shift_expression
    (61) shift_expression -> . additive_expression
    (62) shift_expression -> . shift_expression LSHIFT additive_expression
    (63) shift_expression -> . shift_expression RSHIFT additive_expression
    (64) additive_expression -> . multiplicative_expression
    (65) additive_expression -> . additive_expression PLUS multiplicative_expression
    (66) additive_expression -> . additive_expression MINUS multiplicative_expression
    (67) multiplicative_expression -> . unary_expression
    (68) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (69) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (70) multiplicative_expression -> . multiplicative_expression REMAINDER unary_expression
    (71) unary_expression -> . PLUS unary_expression
    (72) unary_expression -> . MINUS unary_expression
    (73) unary_expression -> . unary_expression_not_plus_minus
    (74) unary_expression_not_plus_minus -> . base_variable_set
    (75) unary_expression_not_plus_minus -> . TILDA unary_expression
    (76) unary_expression_not_plus_minus -> . NOT unary_expression
    (77) base_variable_set -> . variable_literal
    (78) base_variable_set -> . LPAREN expression RPAREN
    (79) variable_literal -> . valid_variable
    (80) variable_literal -> . primary
    (81) primary -> . literal
    (82) primary -> . method_invocation
    (83) literal -> . int_float
    (84) literal -> . c_literal
    (87) int_float -> . INT_NUMBER
    (85) c_literal -> . BOOL_CONSTT
    (86) c_literal -> . BOOL_CONSTF
